--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <audio src="assets/1111.ogg" id="my_audio"></audio>
     <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
     
     <section class="options">
         <div id="start" onclick="startTime()" >
-            <h1 >Start</h1>
+            <h1 >START</h1>
         </div>
         <div id="pause" hidden>
             <h1>Pause/Play</h1>
